apps/panel/deploy/base/auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: panel-auth
  namespace: platform
spec:
  basicAuth:
    secret: panel-basicauth
